# duckduckgo-mcp-server

./: LICENSE  README.md  pyproject.toml
examples/: gemma-nl.modelfile
src/ollama_mcp_server/: server.py
