[project]
name = "ollama-mcp-server"
version = "0.1.0"
description = "MCP Server for Ollama commands"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/ollama-mcp-server"
Issues = "https://github.com/yourusername/ollama-mcp-server/issues"

[project.scripts]
ollama-mcp-server = "ollama_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
